--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Portfolio - Md Nahidul Islam &amp; Interactive CV</title>
+    <title>Portfolio - Shahriar Habib Noman &amp; Interactive CV</title>
     <link rel="stylesheet" href="/style.css">
 
   </head>
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Portfolio - Md Nahidul Islam</title>
+    <title>Portfolio - Shahriar Habib Noman</title>
     
     <!-- Tailwind CSS (CDN for development only) -->
     <script>
@@ -48,7 +48,7 @@
     <div class="loader-screen" id="loader">
         <div class="loader-content">
             <div class="loader-code-text">
-                <div class="code-line" data-line="1"> Md. Nahidul Islam </div>
+                <div class="code-line" data-line="1"> Shahriar Habib Noman </div>
                 <div class="code-line" data-line="2"> CSEH | COE | CEH</div>
                 <div class="code-line" data-line="3"> Initializing...</div>
             </div>
@@ -160,19 +160,19 @@
                     </div>
                     
                     <div class="hero-social">
-                        <a href="https://github.com/fumioryoto" target="_blank" class="social-icon" title="GitHub">
+                        <a href="https://github.com/shahriarhabibnoman" target="_blank" class="social-icon" title="GitHub">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/md-nahidul-islam-72263a384/" target="_blank" class="social-icon" title="LinkedIn">
+                        <a href="https://www.linkedin.com/in/shahriar-habib-noman-72263a384/" target="_blank" class="social-icon" title="LinkedIn">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="https://x.com/fumioryoto" target="_blank" class="social-icon" title="Twitter">
+                        <a href="https://x.com/Noman42605124" target="_blank" class="social-icon" title="Twitter">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="https://www.facebook.com/fumioryoto" target="_blank" class="social-icon" title="Facebook">
+                        <a href="https://www.facebook.com/unknownnoman0" target="_blank" class="social-icon" title="Facebook">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=nahidhasanph79@gmail.com" class="social-icon" title="Email" target="_blank">
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=mdshahriarhabibnoman@gmail.com" class="social-icon" title="Email" target="_blank">
                             <i class="fa-solid fa-envelope"></i>
                         </a>
 
@@ -897,23 +897,23 @@ I'm a Cybersecurity Specialist and WordPress Expert with 3 years of experience. 
                     </p>
                     <p class="footer-author">
                         <span class="footer-by-text" data-text-en="by">by</span>
-                        <a href="https://www.facebook.com/fumioryoto" target="_blank" rel="noopener noreferrer" class="footer-author-link">
+                        <a href="https://www.facebook.com/unknownnoman0" target="_blank" rel="noopener noreferrer" class="footer-author-link">
                             <i class="fas fa-code"></i>
-                            <span>fumioryoto</span>
+                            <span>shahriarhabibnoman</span>
                         </a>
                     </p>
                 </div>
                 <div class="footer-social">
-                    <a href="https://www.linkedin.com/in/md-nahidul-islam-72263a384/" target="_blank" rel="noopener noreferrer" class="footer-social-link">
+                    <a href="https://www.linkedin.com/in/shahriarhabibnoman/" target="_blank" rel="noopener noreferrer" class="footer-social-link">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="https://github.com/fumioryoto" target="_blank" rel="noopener noreferrer" class="footer-social-link" title="GitHub">
+                    <a href="https://github.com/shahriarhabibnoman" target="_blank" rel="noopener noreferrer" class="footer-social-link" title="GitHub">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://www.facebook.com/fumioryoto" target="_blank" rel="noopener noreferrer" class="footer-social-link" title="Facebook">
+                    <a href="https://www.facebook.com/unknownnoman0" target="_blank" rel="noopener noreferrer" class="footer-social-link" title="Facebook">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="https://twitter.com/fumioryoto" target="_blank" rel="noopener noreferrer" class="footer-social-link" title="Twitter">
+                    <a href="https://twitter.com/Noman42605124" target="_blank" rel="noopener noreferrer" class="footer-social-link" title="Twitter">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </div>
@@ -933,4 +933,5 @@ I'm a Cybersecurity Specialist and WordPress Expert with 3 years of experience. 
   </body>
   
 </html>
+
 
