--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ I'm a Cybersecurity Specialist and WordPress Expert with 3 years of experience. 
                                 <div class="code-line indent">
                                     <span class="code-property">name</span>
                                     <span class="code-operator">:</span>
-                                    <span class="code-string">'Nahidul Islam'</span>
+                                    <span class="code-string">'Shahriar Habib Noman'</span>
                                     <span class="code-comma">,</span>
                                 </div>
                                 <div class="code-line indent">
@@ -828,7 +828,7 @@ I'm a Cybersecurity Specialist and WordPress Expert with 3 years of experience. 
                             </div>
                             <div class="contact-details">
                                 <h4 class="contact-label" data-text-en="Email">Email</h4>
-                                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=nahidhasanph79@gmail.com" target="_blank" class="contact-value">nahidhasanph79@gmail.com</a>
+                                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=mdshahriarhabibnoman@gmail.com" target="_blank" class="contact-value">mdshahriarhabibnoman@gmail.com</a>
                             </div>
                         </div>
                         
@@ -838,11 +838,11 @@ I'm a Cybersecurity Specialist and WordPress Expert with 3 years of experience. 
                             </div>
                             <div class="contact-details">
                                 <h4 class="contact-label" data-text-en="WhatsApp">WhatsApp</h4>
-                                <a href="https://wa.me/8801916892998?text=Hello%20Nahid,%20I%20want%20to%20contact%20you" target="_blank" class="contact-value">+8801916892998</a>
+                                <a href="https://wa.me/8801946412177?text=Hello%20Nahid,%20I%20want%20to%20contact%20you" target="_blank" class="contact-value">+8801946412177</a>
                             </div>
                         </div>
                         
-                        <a href="https://www.google.com/maps/search/?api=1&query=Savar,Dhaka,Bangladesh"
+                        <a href="https://www.google.com/maps/search/?api=khulna,Bangladesh"
    class="contact-item"
    target="_blank"
    rel="noopener">
@@ -853,8 +853,8 @@ I'm a Cybersecurity Specialist and WordPress Expert with 3 years of experience. 
 
     <div class="contact-details">
         <h4 class="contact-label" data-text-en="Location">Location</h4>
-        <span class="contact-value" data-text-en="Savar, Dhaka, Bangladesh">
-            Savar, Dhaka, Bangladesh
+        <span class="contact-value" data-text-en="Khulna, Bangladesh">
+            Khulna, Bangladesh
         </span>
     </div>
 </a>
@@ -933,6 +933,7 @@ I'm a Cybersecurity Specialist and WordPress Expert with 3 years of experience. 
   </body>
   
 </html>
+
 
 
 
